--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
    <title>
       TSOS -  a browser-based virtual Operating System in TypeScript
    </title>
@@ -38,9 +40,12 @@
    <script type="text/javascript" src="distrib/os/userCommand.js"></script>
    <script type="text/javascript" src="distrib/os/kernel.js"></script>
    <script type="text/javascript" src="distrib/os/memoryManager.js"></script>
+   <script type="text/javascript" src="distrib/os/cpuScheduler.js"></script>
    <script type="text/javascript" src="distrib/os/processControlBlock.js"></script>
    <script type="text/javascript" src="distrib/os/CpuStatisticsTable.js"></script>
    <script type="text/javascript" src="distrib/os/MemoryInformationTable.js"></script>
+   <script type="text/javascript" src="distrib/os/ResidentListTable.js"></script>
+   <script type="text/javascript" src="distrib/os/ReadyQueueTable.js"></script>
    <script type="text/javascript" src="distrib/os/ProcessControlBlockTable.js"></script>
    <script type="text/javascript"  src="distrib/os/systemInformationSection.js"></script>
    <script type="text/javascript" src="distrib/os/collections.js"></script>
@@ -49,7 +54,7 @@
    <script type="text/javascript" src="distrib/utils.js"></script>
   
    <!-- Uncomment this line below to enable GLaDOS testing -->
-  <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> 
+<!--  <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
 </head>
 
 <body onload="onDocumentLoad()">
@@ -188,7 +193,74 @@
       <textarea class="form-control hostLog" rows="5" id="taProgramInput" name="taProgramInput" ></textarea>
     </div>
          <div class="form-group" id="cpuStat" style = "float: left; width: 100%;">
-          
+
+ <div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#collapse1"> <h4> Resident List </h4> </a>
+      </h4>
+    </div>
+    <div id="collapse1" class="panel-collapse collapse">
+     <table class="table" id="residentListTableElement" >
+              <thead>
+                <tr>
+                  <th>Process State</th>
+                  <th>Program Counter</th>
+                  <th>Accumulator</th>
+                  <th>X Register</th>
+                  <th>Y Register</th>
+                  <th>Z Flag</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
+  </div>
+</div>
+
+ <div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#collapse2"><h4> Ready Queue </h4> </a>
+      </h4>
+    </div>
+    <div id="collapse2" class="panel-collapse collapse">
+     <table class="table" id="readyQueueTableElement" >
+              <thead>
+                <tr>
+                  <th>Process State</th>
+                  <th>Program Counter</th>
+                  <th>Accumulator</th>
+                  <th>X Register</th>
+                  <th>Y Register</th>
+                  <th>Z Flag</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                  <td>00</td>
+                </tr>
+              </tbody>
+            </table>
+    </div>
+  </div>
+</div>
              <h2> CPU </h2> 
            
             <table class="table" id="cpuStatTable" >
