--- a/index.html
+++ b/index.html
@@ -293,23 +293,18 @@
      <table class="table" id="readyQueueTableElement" >
               <thead>
                 <tr>
+                 
                   <th>State</th>
                   <th>PC</th>
                   <th>Acc</th>
                   <th>X</th>
                   <th>Y</th>
                   <th>Z</th>
+                   <th>PID </th>
+                   <th>Base</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>00</td>
-                  <td>00</td>
-                  <td>00</td>
-                  <td>00</td>
-                  <td>00</td>
-                  <td>00</td>
-                </tr>
               </tbody>
             </table>
     </div>
