Created the ResidentListClass and fixed and bug where terminated processes were not being removed

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
    <script type="text/javascript" src="distrib/os/collections.js"></script>
    <script type="text/javascript" src="distrib/os/timer.js"></script>
    <script type="text/javascript" src="distrib/os/ReadyQueue.js"></script>
+   <script type="text/javascript" src="distrib/os/ResidentList.js"></script>
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
   
    <!-- Uncomment this line below to enable GLaDOS testing -->
-<!--  <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
+ <!-- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
 </head>
 
 <body onload="onDocumentLoad()">
