Added the tracking for turn around time and wait time, also fifixed the ps command

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <nav class="navbar navbar-default navBarTextSize navbar-inverse">
 
 <div class="navbar-header ">
- <p class="navbar-text  name "> J<i id = "programSpinner" class="fa fa-spinner " style="font-size:70px; color: #FF0000;"> </i>e/s</p>
+ <p class="navbar-text  name "> J<i id = "programSpinner" class="fa fa-smile-o " style="font-size:70px; color: #FF0000;"> </i>e/s</p>
 </div>
 
     <div  class="navbar-left"
