--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> <!-- Added Bootstrap -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> <!-- Added Font Awesome -->
    <link rel="stylesheet" href="buttons.css" type="text/css" /> <!-- Added Bootstrap Button Extras --> 
-   <link rel="stylesheet" href="title.css" type="text/css" /> <!-- Added Bootstrap Button Extras --> 
+   <link rel="stylesheet" href="title.css" type="text/css" /> <!-- Added Bootstrap Button Extras -->
+   <link rel="stylesheet" href="face.css" type="text/css" /> <!-- Added Bootstrap Button Extras --> 
    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
@@ -44,7 +45,7 @@
    <script type="text/javascript" src="distrib/os/MemoryInformationTable.js"></script>
    <script type="text/javascript" src="distrib/os/ResidentListTable.js"></script>
    <script type="text/javascript" src="distrib/os/ReadyQueueTable.js"></script>
-   <script type="text/javascript" src="distrib/os/ProcessControlBlockTable.js"></script>
+   <script type="text/javascript" src="distrib/os/TerminatedProcessTable.js"></script>
    <script type="text/javascript"  src="distrib/os/systemInformationSection.js"></script>
    <script type="text/javascript" src="distrib/os/collections.js"></script>
    <script type="text/javascript" src="distrib/os/timer.js"></script>
@@ -54,7 +55,7 @@
    <script type="text/javascript" src="distrib/utils.js"></script>
   
    <!-- Uncomment this line below to enable GLaDOS testing -->
- <!-- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
+ <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
 </head>
 
 <body onload="onDocumentLoad()">
@@ -62,7 +63,9 @@
 <nav class="navbar navbar-default navBarTextSize navbar-inverse">
 
 <div class="navbar-header ">
- <p class="navbar-text  name "> J<i id = "programSpinner" class="fa fa-smile-o " style="font-size:70px; color: #FF0000;"> </i>e/s</p>
+ <p class="navbar-text  name "> J<i id = "programSpinner" class="fa fa-spinner " style="font-size:70px; color: #FF0000;"> </i>e/s 
+</p>
+
 </div>
 
     <div  class="navbar-left"
@@ -214,6 +217,9 @@
             </table>
     </div>
   </div>
+
+
+
 <div id = "testLeft" style = "float:left; width: 50%;">
  <div class="panel panel-primary" id = "residentListPanel" style="width: 45%; ">
     <div class="panel-heading">
