Created the base for the file system device driver

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
    <script type="text/javascript" src="distrib/os/timer.js"></script>
    <script type="text/javascript" src="distrib/os/ReadyQueue.js"></script>
    <script type="text/javascript" src="distrib/os/ResidentList.js"></script>
+   <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.ts"></script>
+  
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
   
