--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
    <script type="text/javascript" src="distrib/os/timer.js"></script>
    <script type="text/javascript" src="distrib/os/ReadyQueue.js"></script>
    <script type="text/javascript" src="distrib/os/ResidentList.js"></script>
-   <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.ts"></script>
+   <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.js"></script>
   
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
   
    <!-- Uncomment this line below to enable GLaDOS testing -->
- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
+<!-- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
 </head>
 
 <body onload="onDocumentLoad()">
