--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    <script type="text/javascript" src="distrib/utils.js"></script>
   
    <!-- Uncomment this line below to enable GLaDOS testing -->
-<!-- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script> -->
+<script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
 </head>
 
 <body onload="onDocumentLoad()">
@@ -77,7 +77,7 @@
 
         <div class="form-group ">
 
-         <button 
+         <button
               type="button" 
               id="btnStartOS"  
               name="brnStartOS" 
@@ -116,9 +116,6 @@
                   <i class="fa fa-fast-forward"></i> </p> 
 
               <p class = "navBarButtonText">Advance</p> </button>
-
-
-      
        </div>
 
     </form>
