--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
    <script type="text/javascript" src="distrib/os/ReadyQueue.js"></script>
    <script type="text/javascript" src="distrib/os/ResidentList.js"></script>
    <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.js"></script>
-      <script type="text/javascript" src="distrib/os/File.js"></script>
+   <script type="text/javascript" src="distrib/os/File.js"></script>
+   <script type="text/javascript" src="distrib/os/HardDiskManager.js"></script>
+
   
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
