Changed the base file system implementation to work witht he hard disk implementation and finished the create function for directory only

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
    <script type="text/javascript" src="distrib/os/ResidentList.js"></script>
    <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.js"></script>
    <script type="text/javascript" src="distrib/os/File.js"></script>
+      <script type="text/javascript" src="distrib/os/FileDirectoryObject.js"></script>
    <script type="text/javascript" src="distrib/os/HardDiskManager.js"></script>
 
   
