--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
    <script type="text/javascript" src="distrib/os/ResidentList.js"></script>
    <script type="text/javascript" src="distrib/os/deviceDriverFileSystem.js"></script>
    <script type="text/javascript" src="distrib/os/File.js"></script>
-      <script type="text/javascript" src="distrib/os/FileDirectoryObject.js"></script>
+   <script type="text/javascript" src="distrib/os/FileDirectoryObject.js"></script>
    <script type="text/javascript" src="distrib/os/HardDiskManager.js"></script>
-
-  
+   <script type="text/javascript" src="distrib/os/FileSystemTable.js"></script>
+   <script type="text/javascript" src="distrib/os/HardDiskTable.js"></script>
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
   
@@ -165,11 +165,10 @@
       <div id="divLog" style="width: 400px;">
 
         <div style = "width:400px;"> <p class="sectionHeader">Host Log</p></div>
-          <div id="divLog1" class="form-group " style = " width: 400px; overflow: auto; height: 350px;">
+          <div id="divLog1"  style = " width: 400px; overflow: auto; height: 350px;">
 
-            <ul class="list-group hostLogListItem" id="taHostLog">
-             
-          </ul>
+            <ul class="list-group" id="taHostLog">            
+            </ul>
 
       </div>
 
@@ -179,7 +178,7 @@
 
 <div id="rightSide" style="display: inline-block; width: 550px;">
 
-    <div class="panel panel-primary" id = "mainMemoryPanel" style=" max-height: 300px; overflow: auto;">
+    <div class="panel panel-primary" id = "mainMemoryPanel" style=" max-height: 300px; overflow: auto; margin-top:5px;">
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" href="#memoryInfoTableCollapse"><h4> Memory Manager <i id= "mainMemoryPanelCheck" class="fa fa-check" style = "float: right; display: none;" ></i> </h4> </a>
@@ -211,19 +210,13 @@
                 </tbody>
               </table>
         </div>
-
-       <div id="hardDisk" class="tab-pane fade in active">
+       <div id="hardDisk" class="tab-pane fade in">
           <p class="sectionHeader"> Hard Disk </p>
            <table class="table tableText" id="hardDiskTable" >
                 <thead>
-                    <th>0</th>
-                    <th>1</th>
-                    <th>2</th>
-                    <th>3</th>
-                    <th>4</th>
-                    <th>5</th>
-                    <th>6</th>
-                    <th>7</th>
+                    <th style="width: 15%;">(T,S,B)</th>
+                    <th style="width: 10%;">Header</th>
+                    <th style="width: 75%;">Data</th>
                 </thead>                
                  <tbody>                
                 </tbody>
@@ -315,6 +308,30 @@
             </table>
         </div>
       </div>    
+    </div>
+  </div>
+
+  <div class="panel panel-primary" id = "fileSystemPanel">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#fileSystemCollapse"><h4> File System Manager  <i id= "fileSystemPanelCheck" class="fa fa-check" style = "float: right; display: none;" ></i></h4> </a>
+      </h4>
+    </div>
+    <div id="fileSystemCollapse" class="panel-collapse collapse">
+       <table class="table tableText" id="fileSystemTable" >
+              <thead class="tableText">
+                <tr>
+                  <th>Name</th>
+                  <th>Track</th>
+                  <th>Sector</th>
+                  <th>Block</th>
+                  <th>Contents</th>
+                </tr>
+              </thead>
+              <tbody>
+               
+              </tbody>
+            </table>
     </div>
   </div>
 
