--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> <!-- Added Bootstrap -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> <!-- Added Font Awesome -->
    <link rel="stylesheet" href="buttons.css" type="text/css" /> <!-- Added Bootstrap Button Extras --> 
-   <link rel="stylesheet" href="title.css" type="text/css" /> <!-- Added Bootstrap Button Extras -->
-   <link rel="stylesheet" href="face.css" type="text/css" /> <!-- Added Bootstrap Button Extras --> 
    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
@@ -151,9 +149,10 @@
     </nav>
 
 <div id="divMain" style="overflow: hidden;">
-
+      <p id="dateArea"> Date: </p>
+      <p id="timeArea"> Time: </p>
+      <p id="statusArea"> Status: </p>
   <div id="leftSide" style = "width:400px; float:left;">
-
        <div id="divConsole" class="form-group" style=" width: 400px; ">
           <canvas id="display"
                   width="400px"
